# org.dk.dukunlangit

./: .gitignore  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/org/dkproject/dukunlangit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/DukunLangit/Core/: Main.cpp  Main.h  Patches.cpp  Patches.h  elfLoader.cpp
app/src/main/cpp/DukunLangit/Core/Utils/: Logger.h
app/src/main/cpp/DukunLangit/Enums/: EnumPatch.h
app/src/main/cpp/DukunLangit/Game/: Patches.cpp  Patches.cpp.bu  Patches.h  Patches.h.bu  PatchesData.cpp  PatchesData.cpp.bu
app/src/main/cpp/DukunLangit/Global/: GlobalDefines.h  GlobalVars.cpp  GlobalVars.h
app/src/main/cpp/DukunLangit/JNI/: JNIBridgeCore.cpp  JNIBridgeImGui.cpp  jniBridge.cpp  jniBridgeCore.cpp  jniBridgeImGui.cpp
app/src/main/cpp/DukunLangit/UI/: Graphic.cpp  Graphic.h  Helper.cpp  MainPage.cpp  Menu.cpp  Menu.h  StyleSelector.cpp  Styles.cpp  Styles.h  StylesDef.cpp  TestPage.cpp  UI.cpp  UI.h  ui.cpp  ui.h
app/src/main/cpp/DukunLangit/Utils/: CryptoHelper.cpp  CryptoHelper.h  ELFLoader.cpp  MemoryTools.cpp  MemoryTools.h  OnlineUpdate.cpp  OnlineUpdate.h
app/src/main/cpp/DukunLangit/jni/: jniBridge.cpp
app/src/main/cpp/Includes/StbImage/: create_texture.cpp  create_texture.h
app/src/main/cpp/Langit/ELFLoader/: elfLoader.cpp
app/src/main/java/com/tgc/sky/: BuildConfig.java  GameActivity.java  SystemAccounts_android.java  SystemIO_android.java  SystemSupport_android.java  SystemUI_android.java  TGCNativeActivity.java
app/src/main/java/com/tgc/sky/accounts/: SystemAccountType.java
app/src/main/java/com/tgc/sky/ui/: TextField.java  Utils.java
app/src/main/java/com/tgc/sky/ui/panels/: Starboard.java
app/src/main/java/com/tgc/sky/ui/text/: LocalizationManager.java  Markup.java
app/src/main/java/org/dkproject/dukunlangit/: DialogJNI.java  ELFLoader.java  FileSelector.java  ImGUI.java  ImGUITextInput.java  ImGui.java  LangitApp.java  LangitApplication.java  LauncherActivity.java  LoadVideoView.java  MainActivity.java
app/src/main/java/org/dkproject/dukunlangit/auth/: Facebook.java  Google.java  Huawei.java  Nintendo.java  PSN.java  Steam.java  Twitch.java  WebLogin.java
app/src/main/res/layout/: activity_main.xml  tgc_logo.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/dkproject/dukunlangit/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
